--- a/lib/sous_chef_web/templates/page/index.html.eex
+++ b/lib/sous_chef_web/templates/page/index.html.eex
@@ -1,6 +1,5 @@
 <section class="phx-hero">
-  <h1>Welcome to Phoenix!</h1>
-  <p>Peace of mind from prototype to production</p>
+  <p>Check my binaries Sous Chef!</p>
 </section>
 
 <section class="row">
